--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,174 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="./output.css" rel="stylesheet" />
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
+    <style>
+      body {
+        margin: 0;
+        padding: 0;
+      }
+
+      /* Hero Section */
+      .hero-section {
+        position: relative;
+        height: 100vh;
+        background-image: url("https://images.pexels.com/photos/958545/pexels-photo-958545.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2");
+        background-size: cover;
+        background-position: center;
+        display: flex; /* Add this to enable flexbox */
+        align-items: center; /* This centers the content vertically */
+        justify-content: center; /* This centers the content horizontally */
+      }
+
+      /* Overlay using CSS */
+      .hero-section::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(
+          0,
+          0,
+          0,
+          0.3
+        ); /* Adjust the opacity for the overlay */
+        z-index: 1;
+      }
+
+      /* Hero Content */
+      .hero-content {
+        position: relative;
+        z-index: 2;
+        text-align: center;
+        color: white;
+        padding: 0 1rem;
+      }
+
+      .hero-content h1 {
+        font-size: 4rem;
+        font-weight: bold;
+      }
+
+      .hero-content p {
+        margin-top: 1rem;
+        font-size: 1.25rem;
+      }
+
+      .hero-content button {
+        margin-top: 1.5rem;
+        padding: 1rem 1.5rem;
+        background-color: #f59e0b;
+        color: black;
+        font-weight: bold;
+        border-radius: 0.375rem;
+        transition: background-color 0.3s ease;
+      }
+
+      .hero-content button:hover {
+        background-color: #d97706;
+      }
+    </style>
   </head>
-  <body>
-    <h1 class="text-3xl font-bold underline">Hello world!</h1>
+  <body class="bg-black text-white">
+    <!-- NAVBAR -->
+    <nav
+      id="navbar"
+      class="fixed top-0 left-0 w-full flex items-center justify-between px-6 py-4 z-50 bg-transparent transition-all duration-300"
+    >
+      <!-- Left: Instagram -->
+      <a href="https://instagram.com" class="text-yellow-500 text-2xl">
+        <i class="bx bxl-instagram-alt"></i>
+      </a>
+
+      <!-- Center: Logo -->
+      <div class="flex-grow flex justify-center items-center">
+        <img
+          src="./kalamata-high-resolution-logo-transparent.png"
+          alt="Logo"
+          class="h-12 w-auto"
+        />
+      </div>
+
+      <!-- Right: Menu icon -->
+      <button class="text-yellow-500 text-2xl">
+        <i class="bx bx-menu"></i>
+      </button>
+    </nav>
+
+    <!-- HERO / LANDING SECTION -->
+    <section class="hero-section">
+      <!-- Hero Content -->
+      <div class="hero-content">
+        <h1 class="reveal-h1 text-4xl md:text-6xl font-bold">
+          Welcome to Kalamata
+        </h1>
+        <p class="reveal-h1 mt-4 text-lg md:text-xl">
+          Experience fine dining, redefined.
+        </p>
+        <div class="text-center mt-1.5">
+          <a
+            href="#"
+            class="text-white text-2xl font-bold uppercase tracking-wide"
+            >Reserve Table</a
+          >
+          <div class="border-t border-gray-300 my-4 w-1/2 mx-auto"></div>
+          <a
+            href="#"
+            class="text-white text-2xl font-bold uppercase tracking-wide relative"
+          >
+            View Menu
+            <span class="absolute -left-12 top-1/2 transform -translate-y-1/2"
+              >&rarr;</span
+            >
+          </a>
+        </div>
+      </div>
+    </section>
+
+    <!-- Content -->
+    <div class="h-[200vh] pt-24">
+      <h1 class="text-3xl font-bold underline">Hello world!</h1>
+    </div>
+
+    <!-- Frosted Scroll Script -->
+    <script>
+      const navbar = document.getElementById("navbar");
+
+      window.addEventListener("scroll", () => {
+        if (window.scrollY > 50) {
+          navbar.classList.add("backdrop-blur-lg", "bg-white/10");
+        } else {
+          navbar.classList.remove("backdrop-blur-lg", "bg-white/10");
+        }
+      });
+
+      document.addEventListener("DOMContentLoaded", () => {
+        const watchedElements = document.querySelectorAll(".reveal-h1");
+
+        const watcher = new IntersectionObserver(
+          (entries) => {
+            entries.forEach((entry) => {
+              if (entry.isIntersecting) {
+                entry.target.classList.add("active");
+                watcher.unobserve(entry.target); // Correct method, NOT unwatch
+              }
+            });
+          },
+          {
+            threshold: 0.1
+          }
+        );
+
+        watchedElements.forEach((el) => watcher.observe(el));
+      });
+    </script>
   </body>
 </html>
