--- a/src/index.html
+++ b/src/index.html
@@ -175,10 +175,184 @@
         </div>
       </div>
     </section>
+    <section
+      class="flex flex-col md:flex-row items-center justify-center px-4 py-16 bg-black text-white gap-4"
+    >
+      <!-- Left Image -->
+      <div class="w-full md:w-[30%]">
+        <img
+          src="https://images.pexels.com/photos/31986826/pexels-photo-31986826/free-photo-of-close-up-of-coffee-latte-art-in-tokyo-cafe.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2"
+          alt="Left"
+          class="w-full aspect-square object-cover"
+        />
+      </div>
+
+      <!-- Center Content -->
+      <div
+        class="w-full md:w-[40%] p-8 flex flex-col justify-center items-start text-white"
+      >
+        <h1 class="text-3xl md:text-4xl font-bold mb-4">TTHE BAR</h1>
+        <p class="text-sm md:text-base mb-4">
+          As the sun sets, elevate your experience at the trendiest Gin Bar in
+          town, exclusively at Botanica. Located on the 7th Floor at One Africa
+          Place, our Gin Bar is a destination for connoisseurs and trendsetters
+          alike, offering an array of innovative blends and classic concoctions.
+          Join us at Botanica for an unforgettable journey through the senses,
+          where every dish tells a story and every moment is a celebration.
+          Whether you’re a breakfast enthusiast, a lunchtime explorer, or a
+          dinner connoisseur, our doors are open to welcome you.
+        </p>
+
+        <!-- Centered Buttons -->
+        <div class="flex text-xl flex-col gap-4 mt-6 mx-auto">
+          <a
+            href="#"
+            class="relative text-sm font-bold uppercase hover:text-yellow-500 transition"
+          >
+            <span class="absolute -left-6 top-1/2 transform -translate-y-1/2"
+              >←</span
+            >
+            Reserve Table
+          </a>
+          <a
+            href="#"
+            class="relative text-sm font-bold uppercase hover:text-yellow-500 transition"
+          >
+            <span class="absolute -left-6 top-1/2 transform -translate-y-1/2"
+              >→</span
+            >
+            View Menu
+          </a>
+        </div>
+      </div>
+
+      <!-- Right Image -->
+      <div class="w-full md:w-[30%]">
+        <img
+          src="https://images.pexels.com/photos/262978/pexels-photo-262978.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2"
+          alt="Right"
+          class="w-full aspect-square object-cover"
+        />
+      </div>
+    </section>
+
+    <section class="text-center py-16 bg-black text-white">
+      <h2 class="text-yellow-500 tracking-[0.3em] text-2xl mb-12">VIEW MENU</h2>
+      <div class="flex flex-wrap justify-center gap-6 px-4">
+        <div
+          class="menu-card"
+          style="
+            background-image: url('https://images.pexels.com/photos/27219796/pexels-photo-27219796/free-photo-of-a-close-up-of-three-drinks-with-ice-and-lemon-slices.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2');
+          "
+        >
+          <div class="overlay">
+            <h3>Drinks Menu</h3>
+          </div>
+        </div>
+
+        <div
+          class="menu-card"
+          style="
+            background-image: url('https://images.pexels.com/photos/10078268/pexels-photo-10078268.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2');
+          "
+        >
+          <div class="overlay">
+            <h3>Food Menu</h3>
+          </div>
+        </div>
+
+        <div
+          class="menu-card"
+          style="
+            background-image: url('https://images.pexels.com/photos/20203697/pexels-photo-20203697/free-photo-of-chocolate-mousse-with-strawberries-and-whipped-cream.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load');
+          "
+        >
+          <div class="overlay">
+            <h3>Dessert Menu</h3>
+          </div>
+        </div>
+
+        <div
+          class="menu-card"
+          style="
+            background-image: url('https://images.pexels.com/photos/12360560/pexels-photo-12360560.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2');
+          "
+        >
+          <div class="overlay">
+            <h3>Business Lunch</h3>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="bg-black text-white py-16 px-4">
+      <div
+        class="max-w-7xl mx-auto flex flex-col lg:flex-row justify-between gap-12"
+      >
+        <!-- Book a Table Column -->
+        <div class="text-center lg:text-left flex-1">
+          <button
+            class="border border-white hover:bg-yellow-500 px-6 py-4 text-sm tracking-widest uppercase mb-8"
+          >
+            Book a Table
+          </button>
+          <p class="mb-4 leading-relaxed text-lg">
+            For groups of 10 and above, please call the reservation line as a
+            deposit payment is required to reserve a table.
+          </p>
+          <p class="text-xl text-[#f4ecd8]">+254 735 065 865</p>
+        </div>
+
+        <!-- Contact Details Column -->
+        <div class="flex-1">
+          <h2 class="text-2xl tracking-[0.3em] mb-10 text-center lg:text-left">
+            CONTACT DETAILS
+          </h2>
+          <div class="space-y-10">
+            <!-- Phone -->
+            <div class="flex items-center gap-6">
+              <div class="w-16 h-16 bg-white flex items-center justify-center">
+                <i class="bx bx-phone text-black text-2xl"></i>
+              </div>
+              <div>
+                <h3 class="text-xl font-light">Phone</h3>
+                <p class="text-lg font-semibold text-white">+254 735 065 865</p>
+              </div>
+            </div>
+
+            <!-- Email -->
+            <div class="flex items-center gap-6">
+              <div class="w-16 h-16 bg-white flex items-center justify-center">
+                <i class="bx bx-envelope text-black text-2xl"></i>
+              </div>
+              <div>
+                <h3 class="text-xl font-light">Email</h3>
+                <p class="text-lg font-semibold text-white">
+                  botanica@thefoodlibrary.co.ke
+                </p>
+              </div>
+            </div>
+
+            <!-- Location -->
+            <div class="flex items-center gap-6">
+              <div class="w-16 h-16 bg-white flex items-center justify-center">
+                <i class="bx bx-map text-black text-2xl"></i>
+              </div>
+              <div>
+                <p class="text-lg font-semibold text-white leading-tight">
+                  7th floor, One Africa Place, Waiyaki Way, Nairobi
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- Content -->
-    <div class="h-[200vh] pt-24">
+    <!-- <div class="h-[200vh] pt-24">
       <h1 class="text-3xl font-bold underline">Hello world!</h1>
-    </div>
+    </div> -->
 
     <!-- Frosted Scroll Script -->
     <script>
