--- a/src/index.html
+++ b/src/index.html
@@ -348,6 +348,47 @@
         </div>
       </div>
     </section>
+    <section class="bg-black py-16 px-4">
+      <div
+        class="max-w-7xl mx-auto grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-6"
+      >
+        <img
+          src="https://images.pexels.com/photos/17407686/pexels-photo-17407686.jpeg"
+          alt="Gallery 1"
+          class="w-full h-60 object-cover rounded"
+        />
+
+        <img
+          src="https://images.pexels.com/photos/19579868/pexels-photo-19579868.jpeg"
+          alt="Gallery 2"
+          class="w-full h-60 object-cover rounded"
+        />
+
+        <img
+          src="https://images.pexels.com/photos/10078268/pexels-photo-10078268.jpeg"
+          alt="Gallery 3"
+          class="w-full h-60 object-cover rounded"
+        />
+
+        <img
+          src="https://images.pexels.com/photos/17485336/pexels-photo-17485336.jpeg"
+          alt="Gallery 4"
+          class="w-full h-60 object-cover rounded"
+        />
+
+        <img
+          src="https://images.pexels.com/photos/20221549/pexels-photo-20221549/free-photo-of-the-bosford-dry-gin-bottle-and-gin-tonic.jpeg"
+          alt="Gallery 5"
+          class="w-full h-60 object-cover rounded"
+        />
+
+        <img
+          src="https://images.pexels.com/photos/19496311/pexels-photo-19496311.jpeg"
+          alt="Gallery 6"
+          class="w-full h-60 object-cover rounded"
+        />
+      </div>
+    </section>
 
     <!-- Content -->
     <!-- <div class="h-[200vh] pt-24">
