--- a/src/index.html
+++ b/src/index.html
@@ -349,45 +349,77 @@
       </div>
     </section>
     <section class="bg-black py-16 px-4">
-      <div
-        class="max-w-7xl mx-auto grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-6"
-      >
-        <img
-          src="https://images.pexels.com/photos/17407686/pexels-photo-17407686.jpeg"
-          alt="Gallery 1"
-          class="w-full h-60 object-cover rounded"
-        />
-
-        <img
-          src="https://images.pexels.com/photos/19579868/pexels-photo-19579868.jpeg"
-          alt="Gallery 2"
-          class="w-full h-60 object-cover rounded"
-        />
-
-        <img
-          src="https://images.pexels.com/photos/10078268/pexels-photo-10078268.jpeg"
-          alt="Gallery 3"
-          class="w-full h-60 object-cover rounded"
-        />
-
-        <img
-          src="https://images.pexels.com/photos/17485336/pexels-photo-17485336.jpeg"
-          alt="Gallery 4"
-          class="w-full h-60 object-cover rounded"
-        />
-
-        <img
-          src="https://images.pexels.com/photos/20221549/pexels-photo-20221549/free-photo-of-the-bosford-dry-gin-bottle-and-gin-tonic.jpeg"
-          alt="Gallery 5"
-          class="w-full h-60 object-cover rounded"
-        />
-
-        <img
-          src="https://images.pexels.com/photos/19496311/pexels-photo-19496311.jpeg"
-          alt="Gallery 6"
-          class="w-full h-60 object-cover rounded"
-        />
+     <div class="max-w-7xl mx-auto grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-6">
+    
+    <!-- Image Item -->
+    <div class="relative group rounded overflow-hidden h-60">
+      <img
+        src="https://images.pexels.com/photos/1833349/pexels-photo-1833349.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2"
+        alt="Gallery 1"
+        class="w-full h-full object-cover rounded"
+      />
+      <div class="absolute inset-0 bg-black bg-opacity-60 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
+        <svg class="w-10 h-10 text-white" fill="currentColor" viewBox="0 0 24 24">
+          <path d="M7.5 2A5.5 5.5 0 002 7.5v9A5.5 5.5 0 007.5 22h9a5.5 5.5 0 005.5-5.5v-9A5.5 5.5 0 0016.5 2h-9zm0 2h9A3.5 3.5 0 0120 7.5v9a3.5 3.5 0 01-3.5 3.5h-9A3.5 3.5 0 014 16.5v-9A3.5 3.5 0 017.5 4zM12 7a5 5 0 100 10 5 5 0 000-10zm0 2a3 3 0 110 6 3 3 0 010-6zm5.25-2a.75.75 0 100 1.5.75.75 0 000-1.5z"/>
+        </svg>
       </div>
+    </div>
+     <div class="relative group rounded overflow-hidden h-60">
+      <img
+        src="https://images.pexels.com/photos/25463409/pexels-photo-25463409/free-photo-of-kebab-on-a-plate-during-picnic.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load"
+        alt="Gallery 2"
+        class="w-full h-full object-cover rounded"
+      />
+      <div class="absolute inset-0 bg-black bg-opacity-60 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
+        <svg class="w-10 h-10 text-white" fill="currentColor" viewBox="0 0 24 24">
+          <path d="M7.5 2A5.5 5.5 0 002 7.5v9A5.5 5.5 0 007.5 22h9a5.5 5.5 0 005.5-5.5v-9A5.5 5.5 0 0016.5 2h-9zm0 2h9A3.5 3.5 0 0120 7.5v9a3.5 3.5 0 01-3.5 3.5h-9A3.5 3.5 0 014 16.5v-9A3.5 3.5 0 017.5 4zM12 7a5 5 0 100 10 5 5 0 000-10zm0 2a3 3 0 110 6 3 3 0 010-6zm5.25-2a.75.75 0 100 1.5.75.75 0 000-1.5z"/>
+        </svg>
+      </div>
+    </div> <div class="relative group rounded overflow-hidden h-60">
+      <img
+        src="https://images.pexels.com/photos/2641886/pexels-photo-2641886.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2"
+        alt="Gallery 3"
+        class="w-full h-full object-cover rounded"
+      />
+      <div class="absolute inset-0 bg-black bg-opacity-60 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
+        <svg class="w-10 h-10 text-white" fill="currentColor" viewBox="0 0 24 24">
+          <path d="M7.5 2A5.5 5.5 0 002 7.5v9A5.5 5.5 0 007.5 22h9a5.5 5.5 0 005.5-5.5v-9A5.5 5.5 0 0016.5 2h-9zm0 2h9A3.5 3.5 0 0120 7.5v9a3.5 3.5 0 01-3.5 3.5h-9A3.5 3.5 0 014 16.5v-9A3.5 3.5 0 017.5 4zM12 7a5 5 0 100 10 5 5 0 000-10zm0 2a3 3 0 110 6 3 3 0 010-6zm5.25-2a.75.75 0 100 1.5.75.75 0 000-1.5z"/>
+        </svg>
+      </div>
+    </div> <div class="relative group rounded overflow-hidden h-60">
+      <img
+        src="https://images.pexels.com/photos/10559044/pexels-photo-10559044.jpeg"
+        alt="Gallery 4"
+        class="w-full h-full object-cover rounded"
+      />
+      <div class="absolute inset-0 bg-black bg-opacity-60 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
+        <svg class="w-10 h-10 text-white" fill="currentColor" viewBox="0 0 24 24">
+          <path d="M7.5 2A5.5 5.5 0 002 7.5v9A5.5 5.5 0 007.5 22h9a5.5 5.5 0 005.5-5.5v-9A5.5 5.5 0 0016.5 2h-9zm0 2h9A3.5 3.5 0 0120 7.5v9a3.5 3.5 0 01-3.5 3.5h-9A3.5 3.5 0 014 16.5v-9A3.5 3.5 0 017.5 4zM12 7a5 5 0 100 10 5 5 0 000-10zm0 2a3 3 0 110 6 3 3 0 010-6zm5.25-2a.75.75 0 100 1.5.75.75 0 000-1.5z"/>
+        </svg>
+      </div>
+    </div> <div class="relative group rounded overflow-hidden h-60">
+      <img
+        src="https://images.pexels.com/photos/1267320/pexels-photo-1267320.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2"
+        alt="Gallery 5"
+        class="w-full h-full object-cover rounded"
+      />
+      <div class="absolute inset-0 bg-black bg-opacity-60 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
+        <svg class="w-10 h-10 text-white" fill="currentColor" viewBox="0 0 24 24">
+          <path d="M7.5 2A5.5 5.5 0 002 7.5v9A5.5 5.5 0 007.5 22h9a5.5 5.5 0 005.5-5.5v-9A5.5 5.5 0 0016.5 2h-9zm0 2h9A3.5 3.5 0 0120 7.5v9a3.5 3.5 0 01-3.5 3.5h-9A3.5 3.5 0 014 16.5v-9A3.5 3.5 0 017.5 4zM12 7a5 5 0 100 10 5 5 0 000-10zm0 2a3 3 0 110 6 3 3 0 010-6zm5.25-2a.75.75 0 100 1.5.75.75 0 000-1.5z"/>
+        </svg>
+      </div>
+    </div> <div class="relative group rounded overflow-hidden h-60">
+      <img
+        src="https://images.pexels.com/photos/15198279/pexels-photo-15198279/free-photo-of-hands-holding-bottle-of-wine-next-to-gourmet-dishes.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load"
+        alt="Gallery 6"
+        class="w-full h-full object-cover rounded"
+      />
+      <div class="absolute inset-0 bg-black bg-opacity-60 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
+        <svg class="w-10 h-10 text-white" fill="currentColor" viewBox="0 0 24 24">
+          <path d="M7.5 2A5.5 5.5 0 002 7.5v9A5.5 5.5 0 007.5 22h9a5.5 5.5 0 005.5-5.5v-9A5.5 5.5 0 0016.5 2h-9zm0 2h9A3.5 3.5 0 0120 7.5v9a3.5 3.5 0 01-3.5 3.5h-9A3.5 3.5 0 014 16.5v-9A3.5 3.5 0 017.5 4zM12 7a5 5 0 100 10 5 5 0 000-10zm0 2a3 3 0 110 6 3 3 0 010-6zm5.25-2a.75.75 0 100 1.5.75.75 0 000-1.5z"/>
+        </svg>
+      </div>
+    </div>
     </section>
 
     <!-- Content -->
