added web 3 forms

--- a/src/index.html
+++ b/src/index.html
@@ -151,7 +151,7 @@
     <a href="drinks.pdf" target="_blank" class="menu-link">Drinks Menu</a>
     <a href="food.pdf" target="_blank" class="menu-link">Food Menu</a>
     <a href="dessert.pdf" target="_blank" class="menu-link">Dessert Menu</a>
-    <a href="#reserve" class="menu-link">Reserve Table</a>
+    <a href="reserve.html" class="menu-link">Reserve Table</a>
   </nav>
 </div>
 
@@ -218,7 +218,80 @@
             >
             Reserve Table
           </a>
-          <a href="#" class="relative text-lg font-bold uppercase">
+          <a href="<form
+  action="https://api.web3forms.com/submit"
+  method="POST"
+  class="max-w-xl mx-auto p-6 bg-black text-white space-y-4 rounded-lg"
+>
+  <!-- Required Access Key -->
+  <input type="hidden" name="access_key" value="YOUR_ACCESS_KEY_HERE" />
+
+  <!-- Form Fields -->
+  <div>
+    <label for="name" class="block mb-1 text-yellow-500">Name</label>
+    <input
+      type="text"
+      name="name"
+      id="name"
+      required
+      class="w-full px-4 py-2 rounded bg-gray-800 border border-gray-700 focus:outline-none focus:border-yellow-500"
+    />
+  </div>
+
+  <div>
+    <label for="email" class="block mb-1 text-yellow-500">Email</label>
+    <input
+      type="email"
+      name="email"
+      id="email"
+      required
+      class="w-full px-4 py-2 rounded bg-gray-800 border border-gray-700 focus:outline-none focus:border-yellow-500"
+    />
+  </div>
+
+  <div>
+    <label for="date" class="block mb-1 text-yellow-500">Date</label>
+    <input
+      type="date"
+      name="date"
+      id="date"
+      required
+      class="w-full px-4 py-2 rounded bg-gray-800 border border-gray-700 focus:outline-none focus:border-yellow-500"
+    />
+  </div>
+
+  <div>
+    <label for="time" class="block mb-1 text-yellow-500">Time</label>
+    <input
+      type="time"
+      name="time"
+      id="time"
+      required
+      class="w-full px-4 py-2 rounded bg-gray-800 border border-gray-700 focus:outline-none focus:border-yellow-500"
+    />
+  </div>
+
+  <div>
+    <label for="guests" class="block mb-1 text-yellow-500">No. of Guests</label>
+    <input
+      type="number"
+      name="guests"
+      id="guests"
+      required
+      min="1"
+      max="20"
+      class="w-full px-4 py-2 rounded bg-gray-800 border border-gray-700 focus:outline-none focus:border-yellow-500"
+    />
+  </div>
+
+  <button
+    type="submit"
+    class="bg-yellow-500 text-black font-bold px-6 py-2 rounded hover:bg-yellow-600 transition"
+  >
+    Book Now
+  </button>
+</form>
+" class="relative text-lg font-bold uppercase">
             <span class="absolute -left-6 top-1/2 transform -translate-y-1/2"
               >→</span
             >
@@ -243,7 +316,7 @@
       <div
         class="w-full md:w-[40%] p-8 flex flex-col justify-center items-start text-white"
       >
-        <h1 class="text-3xl md:text-4xl font-bold mb-4">TTHE BAR</h1>
+        <h1 class="text-3xl md:text-4xl font-bold mb-4">THE BAR</h1>
         <p class="text-sm md:text-base mb-4">
           As the sun sets, elevate your experience at the trendiest Gin Bar in
           town, exclusively at Botanica. Located on the 7th Floor at One Africa
