the reservation form is perfect

--- a/src/reserve.html
+++ b/src/reserve.html
@@ -163,6 +163,11 @@
         <a href="#reserve" class="menu-link">Reserve Table</a>
       </nav>
     </div>
+    <h2
+      class="text-2xl tracking-[0.3em] text-yellow-600 mb-10 text-center pt-32"
+    >
+      RESERVATION
+    </h2>
 
     <form
       action="https://api.web3forms.com/submit"
