reservation form done

--- a/src/index.html
+++ b/src/index.html
@@ -212,91 +212,13 @@
           intimate dinner under the stars.
         </p>
         <div class="flex text-3xl flex-col gap-2 mt-10 ml-auto">
-          <a href="#" class="relative text-lg font-bold uppercase">
+          <a href="reserve.html" class="relative text-lg font-bold uppercase">
             <span class="absolute -left-6 top-1/2 transform -translate-y-1/2"
               >←</span
             >
             Reserve Table
           </a>
-          <a href="<form
-  action="https://api.web3forms.com/submit"
-  method="POST"
-  class="max-w-xl mx-auto p-6 bg-black text-white space-y-4 rounded-lg"
->
-  <!-- Required Access Key -->
-  <input type="hidden" name="access_key" value="YOUR_ACCESS_KEY_HERE" />
-
-  <!-- Form Fields -->
-  <div>
-    <label for="name" class="block mb-1 text-yellow-500">Name</label>
-    <input
-      type="text"
-      name="name"
-      id="name"
-      required
-      class="w-full px-4 py-2 rounded bg-gray-800 border border-gray-700 focus:outline-none focus:border-yellow-500"
-    />
-  </div>
-
-  <div>
-    <label for="email" class="block mb-1 text-yellow-500">Email</label>
-    <input
-      type="email"
-      name="email"
-      id="email"
-      required
-      class="w-full px-4 py-2 rounded bg-gray-800 border border-gray-700 focus:outline-none focus:border-yellow-500"
-    />
-  </div>
-
-  <div>
-    <label for="date" class="block mb-1 text-yellow-500">Date</label>
-    <input
-      type="date"
-      name="date"
-      id="date"
-      required
-      class="w-full px-4 py-2 rounded bg-gray-800 border border-gray-700 focus:outline-none focus:border-yellow-500"
-    />
-  </div>
-
-  <div>
-    <label for="time" class="block mb-1 text-yellow-500">Time</label>
-    <input
-      type="time"
-      name="time"
-      id="time"
-      required
-      class="w-full px-4 py-2 rounded bg-gray-800 border border-gray-700 focus:outline-none focus:border-yellow-500"
-    />
-  </div>
-
-  <div>
-    <label for="guests" class="block mb-1 text-yellow-500">No. of Guests</label>
-    <input
-      type="number"
-      name="guests"
-      id="guests"
-      required
-      min="1"
-      max="20"
-      class="w-full px-4 py-2 rounded bg-gray-800 border border-gray-700 focus:outline-none focus:border-yellow-500"
-    />
-  </div>
-
-  <button
-    type="submit"
-    class="bg-yellow-500 text-black font-bold px-6 py-2 rounded hover:bg-yellow-600 transition"
-  >
-    Book Now
-  </button>
-</form>
-" class="relative text-lg font-bold uppercase">
-            <span class="absolute -left-6 top-1/2 transform -translate-y-1/2"
-              >→</span
-            >
-            View Menu
-          </a>
+        
         </div>
       </div>
     </section>
@@ -409,8 +331,7 @@
         </div>
       </div>
     </section>
-
-    <section class="bg-black text-white py-16 px-4">
+  <section class="bg-black text-white py-16 px-4">
       <div
         class="max-w-7xl mx-auto flex flex-col lg:flex-row justify-between gap-12"
       >
@@ -473,6 +394,7 @@
         </div>
       </div>
     </section>
+  
     <section class="bg-black py-16 px-4">
      <div class="max-w-7xl mx-auto grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-6">
     
