--- a/src/index.html
+++ b/src/index.html
@@ -532,7 +532,15 @@
 
   <!-- Bottom Bar -->
   <div class="mt-16 border-t border-white/10 pt-6 flex flex-col md:flex-row justify-between items-center text-sm text-gray-400">
-    <p class="mb-2 md:mb-0">WEBSITE BY OB</p>
+  <a
+          href="https://paulobiero.netlify.app"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <p class="mb-2 hover:text-yellow-600 md:mb-0 cursor-pointer">
+            WEBSITE BY OB
+          </p>
+        </a>
     <p>COPYRIGHT © 2025. ALL RIGHTS RESERVED.</p>
   </div>
 </footer>
