--- a/src/index.html
+++ b/src/index.html
@@ -169,7 +169,7 @@
         </p>
         <div class="text-center cta-links">
           <a
-            href="#"
+            href="reserve.html"
             class="text-white hover:text-yellow-600 font-bold uppercase tracking-wide relative custom-link"
           >
             <span class="absolute -left-6 top-1/2 transform -translate-y-1/2"
@@ -179,7 +179,7 @@
           </a>
           <div class="border-t border-gray-300 my-4 w-1/2 mx-auto"></div>
           <a
-            href="#"
+            href="#view"
             class="text-white hover:text-yellow-600 font-bold uppercase tracking-wide relative custom-link"
           >
             <span class="absolute -left-6 top-1/2 transform -translate-y-1/2"
@@ -284,7 +284,9 @@
     </section>
 
     <section class="text-center py-16 bg-black text-white">
-      <h2 class="text-yellow-500 tracking-[0.3em] text-2xl mb-12">VIEW MENU</h2>
+      <h2 
+      id="view"
+      class="text-yellow-500 tracking-[0.3em] text-2xl mb-12">VIEW MENU</h2>
       <div class="flex flex-wrap justify-center gap-6 px-4">
         <div
           class="menu-card"
@@ -337,11 +339,14 @@
       >
         <!-- Book a Table Column -->
         <div class="text-center lg:text-left flex-1">
-          <button
-            class="border border-white hover:bg-yellow-500 px-6 py-4 text-sm tracking-widest uppercase mb-8"
-          >
-            Book a Table
-          </button>
+         <a href="reserve.html">
+  <button
+    class="border border-white hover:bg-yellow-500 px-6 py-4 text-sm tracking-widest uppercase mb-8"
+  >
+    Book a Table
+  </button>
+</a>
+
           <p class="mb-4 leading-relaxed text-lg">
             For groups of 10 and above, please call the reservation line as a
             deposit payment is required to reserve a table.
