--- a/src/index.html
+++ b/src/index.html
@@ -253,7 +253,7 @@
         <!-- Centered Buttons -->
         <div class="flex text-xl flex-col gap-4 mt-6 mx-auto">
           <a
-            href="#"
+            href="reserve.html"
             class="relative text-sm font-bold uppercase hover:text-yellow-500 transition"
           >
             <span class="absolute -left-6 top-1/2 transform -translate-y-1/2"
@@ -263,6 +263,7 @@
           </a>
           <a
             href="#"
+            id="view"
             class="relative text-sm font-bold uppercase hover:text-yellow-500 transition"
           >
             <span class="absolute -left-6 top-1/2 transform -translate-y-1/2"
@@ -351,7 +352,7 @@
             For groups of 10 and above, please call the reservation line as a
             deposit payment is required to reserve a table.
           </p>
-          <p class="text-xl text-[#f4ecd8]">+254 735 065 865</p>
+          <p class="text-xl text-[#f4ecd8]">+254 795553206</p>
         </div>
 
         <!-- Contact Details Column -->
@@ -367,7 +368,7 @@
               </div>
               <div>
                 <h3 class="text-xl font-light">Phone</h3>
-                <p class="text-lg font-semibold text-white">+254 735 065 865</p>
+                <p class="text-lg font-semibold text-white">+254 795553206</p>
               </div>
             </div>
 
@@ -379,7 +380,7 @@
               <div>
                 <h3 class="text-xl font-light">Email</h3>
                 <p class="text-lg font-semibold text-white">
-                  botanica@thefoodlibrary.co.ke
+                  kalamata@gmail.com
                 </p>
               </div>
             </div>
@@ -391,7 +392,7 @@
               </div>
               <div>
                 <p class="text-lg font-semibold text-white leading-tight">
-                  7th floor, One Africa Place, Waiyaki Way, Nairobi
+                 PQ77+R29, James Gichuru Road, Nairobi
                 </p>
               </div>
             </div>
