--- a/src/index.html
+++ b/src/index.html
@@ -172,7 +172,7 @@
             href="reserve.html"
             class="text-white hover:text-yellow-600 font-bold uppercase tracking-wide relative custom-link"
           >
-            <span class="absolute -left-6 top-1/2 transform -translate-y-1/2"
+            <span class="absolute reveal-h1 -left-6 top-1/2 transform -translate-y-1/2"
               >→</span
             >
             Reserve Table
@@ -180,7 +180,7 @@
           <div class="border-t border-gray-300 my-4 w-1/2 mx-auto"></div>
           <a
             href="#view"
-            class="text-white hover:text-yellow-600 font-bold uppercase tracking-wide relative custom-link"
+            class="text-white reveal-h1 hover:text-yellow-600 font-bold uppercase tracking-wide relative custom-link"
           >
             <span class="absolute -left-6 top-1/2 transform -translate-y-1/2"
               >→</span
@@ -191,14 +191,14 @@
       </div>
     </section>
 
-    <section class="flex h-screen mt-50">
+    <section class="flex h-screen  reveal-h1 mt-50">
       <div
         class="w-1/2 bg-[url('https://images.pexels.com/photos/941861/pexels-photo-941861.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2')] bg-cover bg-center"
       ></div>
       <div
         class="w-1/2 p-8 flex flex-col justify-center items-start text-white mb-0"
       >
-        <h1 class="text-4xl font-bold mb-4">From Sunrise to Starlight</h1>
+        <h1 class="text-4xl font-bold  reveal-h1 mb-4">From Sunrise to Starlight</h1>
         <p class="text-base mb-6">
           Nestled high above the city on our cozy indoor floor, Botanica invites
           you to indulge in an extraordinary dining experience. From the first
@@ -223,7 +223,7 @@
       </div>
     </section>
     <section
-      class="flex flex-col md:flex-row items-center justify-center px-4 py-16 bg-black text-white gap-4"
+      class=" reveal-h1 flex flex-col md:flex-row items-center justify-center px-4 py-16 bg-black text-white gap-4"
     >
       <!-- Left Image -->
       <div class="w-full md:w-[30%]">
@@ -238,7 +238,7 @@
       <div
         class="w-full md:w-[40%] p-8 flex flex-col justify-center items-start text-white"
       >
-        <h1 class="text-3xl md:text-4xl font-bold mb-4">THE BAR</h1>
+        <h1 class="text-3xl md:text-4xl reveal-h1  font-bold mb-4">THE BAR</h1>
         <p class="text-sm md:text-base mb-4">
           As the sun sets, elevate your experience at the trendiest Gin Bar in
           town, exclusively at Botanica. Located on the 7th Floor at One Africa
@@ -284,10 +284,10 @@
       </div>
     </section>
 
-    <section class="text-center py-16 bg-black text-white">
+    <section class="text-center  reveal-h1 py-16 bg-black text-white">
       <h2 
       id="view"
-      class="text-yellow-500 tracking-[0.3em] text-2xl mb-12">VIEW MENU</h2>
+      class="text-yellow-500 tracking-[0.3em]  reveal-h1 text-2xl mb-12">VIEW MENU</h2>
       <div class="flex flex-wrap justify-center gap-6 px-4">
         <div
           class="menu-card"
@@ -301,7 +301,7 @@
         </div>
 
         <div
-          class="menu-card"
+          class="menu-card  "
           style="
             background-image: url('https://images.pexels.com/photos/10078268/pexels-photo-10078268.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2');
           "
@@ -334,7 +334,7 @@
         </div>
       </div>
     </section>
-  <section class="bg-black text-white py-16 px-4">
+  <section class="bg-black reveal-h1 text-white py-16 px-4">
       <div
         class="max-w-7xl mx-auto flex flex-col lg:flex-row justify-between gap-12"
       >
@@ -342,13 +342,13 @@
         <div class="text-center lg:text-left flex-1">
          <a href="reserve.html">
   <button
-    class="border border-white hover:bg-yellow-500 px-6 py-4 text-sm tracking-widest uppercase mb-8"
+    class="border border-white  reveal-h1 hover:bg-yellow-500 px-6 py-4 text-sm tracking-widest uppercase mb-8"
   >
     Book a Table
   </button>
 </a>
 
-          <p class="mb-4 leading-relaxed text-lg">
+          <p class="mb-4 reveal-h1  leading-relaxed text-lg">
             For groups of 10 and above, please call the reservation line as a
             deposit payment is required to reserve a table.
           </p>
@@ -357,7 +357,7 @@
 
         <!-- Contact Details Column -->
         <div class="flex-1">
-          <h2 class="text-2xl tracking-[0.3em] mb-10 text-center lg:text-left">
+          <h2 class="text-2xl  reveal-h1 tracking-[0.3em] reveal-h1  mb-10 text-center lg:text-left">
             CONTACT DETAILS
           </h2>
           <div class="space-y-10">
@@ -367,13 +367,13 @@
                 <i class="bx bx-phone text-black text-2xl"></i>
               </div>
               <div>
-                <h3 class="text-xl font-light">Phone</h3>
-                <p class="text-lg font-semibold text-white">+254 795553206</p>
+                <h3 class="text-xl reveal-h1 font-light">Phone</h3>
+                <p class="text-lg  reveal-h1 font-semibold text-white">+254 795553206</p>
               </div>
             </div>
 
             <!-- Email -->
-            <div class="flex items-center gap-6">
+            <div class="flex items-center reveal-h1 gap-6">
               <div class="w-16 h-16 bg-white flex items-center justify-center">
                 <i class="bx bx-envelope text-black text-2xl"></i>
               </div>
@@ -401,7 +401,7 @@
       </div>
     </section>
   
-    <section class="bg-black py-16 px-4">
+    <section class="bg-black py-16 reveal-h1  px-4">
      <div class="max-w-7xl mx-auto grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-6">
     
     <!-- Image Item -->
@@ -474,8 +474,8 @@
       </div>
     </div>
     </section>
-<section class="text-center py-16 bg-black text-white">
-  <h2 class="text-yellow-500 tracking-[0.3em] text-2xl mb-12">REVIEWS</h2>
+<section class="text-center py-16 bg-black  reveal-h1 text-white">
+  <h2 class="text-yellow-500 tracking-[0.3em] text-2xl  reveal-h1 mb-12">REVIEWS</h2>
 
   <!-- REVIEW WRAPPER -->
   <div class="flex flex-wrap justify-center gap-6 px-4">
