--- a/src/index.html
+++ b/src/index.html
@@ -191,39 +191,38 @@
       </div>
     </section>
 
-    <section class="flex h-screen  reveal-h1 mt-50">
-      <div
-        class="w-1/2 bg-[url('https://images.pexels.com/photos/941861/pexels-photo-941861.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2')] bg-cover bg-center"
-      ></div>
-      <div
-        class="w-1/2 p-8 flex flex-col justify-center items-start text-white mb-0"
-      >
-        <h1 class="text-4xl font-bold  reveal-h1 mb-4">From Sunrise to Starlight</h1>
-        <p class="text-base mb-6">
-          Nestled high above the city on our cozy indoor floor, Botanica invites
-          you to indulge in an extraordinary dining experience. From the first
-          light of breakfast to the twilight of dinner, our curated menu
-          showcases the best in farm-to-table dishes.
-        </p>
-        <p class="text-base mb-6">
-          Step onto our lush green terrace and escape the urban buzz as you dine
-          amidst the foliage, enjoying the panoramic views of Nairobi. This
-          oasis in the sky is the perfect backdrop for a leisurely lunch or an
-          intimate dinner under the stars.
-        </p>
-        <div class="flex text-3xl flex-col gap-2 mt-10 ml-auto">
-          <a href="reserve.html" class="relative text-lg font-bold uppercase">
-            <span class="absolute -left-6 top-1/2 transform -translate-y-1/2"
-              >←</span
-            >
-            Reserve Table
-          </a>
-        
-        </div>
-      </div>
-    </section>
+   <section class="flex flex-col md:flex-row h-auto md:h-screen reveal-h1 mt-40">
+  <div
+    class="w-full md:w-1/2 h-64 md:h-auto bg-[url('https://images.pexels.com/photos/941861/pexels-photo-941861.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2')] bg-cover bg-center"
+  ></div>
+
+  <div
+    class="w-full md:w-1/2 p-8 flex flex-col justify-center items-start text-white"
+  >
+    <h1 class="text-4xl font-bold reveal-h1 mb-4">From Sunrise to Starlight</h1>
+    <p class="text-base mb-6">
+      Nestled high above the city on our cozy indoor floor, Botanica invites
+      you to indulge in an extraordinary dining experience. From the first
+      light of breakfast to the twilight of dinner, our curated menu
+      showcases the best in farm-to-table dishes.
+    </p>
+    <p class="text-base mb-6">
+      Step onto our lush green terrace and escape the urban buzz as you dine
+      amidst the foliage, enjoying the panoramic views of Nairobi. This
+      oasis in the sky is the perfect backdrop for a leisurely lunch or an
+      intimate dinner under the stars.
+    </p>
+    <div class="flex text-3xl flex-col gap-2 mt-10 ml-auto">
+      <a href="reserve.html" class="relative text-lg font-bold uppercase">
+        <span class="absolute -left-6 top-1/2 transform -translate-y-1/2">←</span>
+        Reserve Table
+      </a>
+    </div>
+  </div>
+</section>
+
     <section
-      class=" reveal-h1 flex flex-col md:flex-row items-center justify-center px-4 py-16 bg-black text-white gap-4"
+      class=" reveal-h1 flex   mt-40 flex-col md:flex-row items-center justify-center px-4 py-16 bg-black text-white gap-4"
     >
       <!-- Left Image -->
       <div class="w-full md:w-[30%]">
